Add some new scripts for building

--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "build:linuxarm": "electron-packager . $npm_package_productName --out=dist --arch=armv7l --platform=linux --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=$npm_package_electronVersion --app-version=$npm_package_version --icon=./assets/icons/png/64x64.png",
     "build:linuxwin": "electron-packager . %npm_package_productName% --out=dist --arch=all --platform=linux --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/png/64x64.png",
     "package": "npm run package:winall && npm run package:linux",
-    "package:winall": "npm run package:win && npm run package:winportable",
+    "package:winall": "npm run package:win && sleep 2 && npm run package:winportable",
     "package:win": "npm run package:win32 && npm run package:win64",
     "package:win64": "node_modules/.bin/build --pd=dist/jiMUD-win32-x64/ --win --x64 && ren \"dist\\jiMUD Setup %npm_package_version%.exe\" jiMUD_%npm_package_version%_Windows-x64.exe",
     "package:win32": "node_modules/.bin/build --pd=dist/jiMUD-win32-ia32/ --win --ia32 && ren \"dist\\jiMUD Setup %npm_package_version%.exe\" jiMUD_%npm_package_version%_Windows-x32.exe",
+    "package:win32-all": "npm run package:win32 && sleep 2&& npm run package:winportable32",
+    "package:win64-all": "npm run package:win64 && sleep 2&& npm run package:winportable64",
     "package:winportable": "npm run package:winportable32 && npm run package:winportable64",
     "package:winportable64": "node_modules/.bin/build --pd=dist/jiMUD-win32-x64/ --win portable:x64 && ren \"dist\\jiMUD %npm_package_version%.exe\" jiMUD_%npm_package_version%_Windows_portable-x64.exe",
     "package:winportable32": "node_modules/.bin/build --pd=dist/jiMUD-win32-ia32/ --win portable:ia32 && ren \"dist\\jiMUD %npm_package_version%.exe\" jiMUD_%npm_package_version%_Windows_portable-x32.exe",
