--- a/package.json
+++ b/package.json
@@ -103,7 +103,9 @@
     },
     "linux": {
       "maintainer": "icewolfz",
-      "icon": "./assets/icons/png/"
+      "icon": "./assets/icons/png/",
+      "category": "Game;Network",
+      "synopsis": "MUD client coded in javascript."
     }
   },
   "dependencies": {
