--- a/package.json
+++ b/package.json
@@ -78,13 +78,14 @@
     "babili": "^0.1.4",
     "devtron": "^1.4.0",
     "electron": "^1.8.0",
-    "electron-builder": "^17.10.0",
+    "electron-builder": "^19.27.7",
     "electron-installer-dmg": "^0.2.1",
     "electron-local-crash-reporter": "^1.0.2",
     "electron-packager": "^8.7.2",
     "electron-rebuild": "^1.6.0",
     "eslint": "^4.6.1",
-    "eslint-plugin-html": "^3.2.1"
+    "eslint-plugin-html": "^3.2.1",
+    "node-abi": "^2.1.1"
   },
   "build": {
     "appId": "jiMUD",
