--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "compile:common": "tsc -p . --listEmittedFiles",
     "compile:worker": "tsc -p ./src/worker --listEmittedFiles",
     "compile:debug": "npm run sass && npm run compile:themes && npm run compile:worker && npm run compile:common && copy out\\*.js build\\js\\ && echo Compile Done",
+    "compile:debug-linux": "npm run sass && npm run compile:themes && npm run compile:worker && npm run compile:common && cp out/*.js build/js/ && echo Compile Done",
     "build": "npm run build:win64 && npm run build:linux",
     "build:osx": "electron-packager . %npm_package_productName% --out=dist --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --overwrite --prune --asar --arch=all --platform=darwin --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/mac/app.icns",
     "build:win32": "npm run rebuild:win32 && electron-packager . %npm_package_productName% --out=dist --arch=ia32 --platform=win32 --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/win/app.ico --win32metadata.CompanyName=\"jiMUD\" --win32metadata.ProductName=\"jiMUD\" --win32metadata.FileDescription=\"jiMUD\" --win32metadata.OriginalFilename=\"jiMUD.exe\" --appCopyright=\"Copyright © 2017 Icewolfz. All rights reserved.\"",
