--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "release:win64": "npm run compile && npm run rebuild:win64 && npm run build:win64 && npm run package:win64 && sleep 2 && npm run package:winportable64",
     "release:linux32": "npm run compile && npm run rebuild:linux32 && npm run build:linux32 && npm run package:linux32 && sleep 2 && npm run package:linux-other32",
     "release:linux64": "npm run compile && npm run rebuild:linux64 && npm run build:linux64 && npm run package:linux64 && sleep 2 && npm run package:linux-other64",
-    "release:linuxarm": "npm run compile && && npm run rebuild:linuxarm npm run build:linux64 && npm run package:linuxarm && sleep 2 && npm run package:linux-otherarm",
+    "release:linuxarm": "npm run compile && && npm run rebuild:linuxarm && npm run build:linux64 && npm run package:linuxarm && sleep 2 && npm run package:linux-otherarm",
     "release:win": "npm run release:win32 && npm run release:win64",
     "release:linux": "npm run release:linux32 && npm run release:linux64 && npm run release:linuxarm",    
     "clean": "npm run clean:code && npm run clean:css",
