--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "private": true,
   "scripts": {
     "start": "electron .",
-    "debug": "electron . -d",
+    "debug": "electron . -d --inspect-brk=5858",
     "clean:dist": "rm -rf ./dist",
     "compile": "npm run sass && npm run compile:themes && npm run compile:worker && npm run compile:common && npm run min && echo Compile Done",
     "compile:common": "tsc -p . --listEmittedFiles",
