--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "private": true,
   "scripts": {
     "start": "electron .",
-    "debug": "electron . -d --inspect-brk=5858",
+    "debug": "electron . -d",
     "clean": "npm run clean:code && npm run clean:css",
     "compile": "npm run sass && npm run compile:themes && npm run compile:worker && npm run compile:common && npm run min && echo Compile Done",
     "compile:debug": "npm run sass && npm run compile:themes && npm run compile:worker && npm run compile:common && copy out\\*.js build\\js\\ && echo Compile Done",
