--- a/package.json
+++ b/package.json
@@ -129,6 +129,8 @@
     "lz-string": "^1.4.4",
     "mathjs-expression-parser": "^1.0.0",
     "moment": "^2.22.1",
+    "monaco-editor": "^0.12.0",
+    "monaco-loader": "^0.8.2",
     "rgbcolor": "^1.0.0",
     "spellchecker": "^3.4.4",
     "sqlite3": "^3.1.13",
