--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "start": "electron .",
     "debug": "electron . -d",
     "clean": "npm run clean:code && npm run clean:css",
-    "compile": "npm run sass && npm run compile:themes && npm run compile:worker && npm run compile:common && npm run min && echo Compile Done",
-    "compile:debug": "npm run sass && npm run compile:themes && npm run compile:worker && npm run compile:common && copy out\\*.js build\\js\\ && echo Compile Done",
-    "compile:debug-linux": "npm run sass && npm run compile:themes && npm run compile:worker && npm run compile:common && cp out/*.js build/js/ && echo Compile Done",
+    "compile": "npm run compile:css && npm run compile:themes && npm run compile:worker && npm run compile:common && npm run min && echo Compile Done",
+    "compile:debug": "npm run compile:css && npm run compile:themes && npm run compile:worker && npm run compile:common && copy out\\*.js build\\js\\ && echo Compile Done",
+    "compile:debug-linux": "npm run compile:css && npm run compile:themes && npm run compile:worker && npm run compile:common && cp out/*.js build/js/ && echo Compile Done",
     "compile:common": "tsc -p . --listEmittedFiles",
     "compile:worker": "tsc -p ./src/worker --listEmittedFiles",
+    "compile:css": "node-sass src/css/ -o build/css/ --output-style compressed",
+    "compile:themes": "node-sass src/themes/ -o build/themes/ --output-style compressed",    
     "build": "npm run build:win64 && npm run build:linux",
     "build:osx": "electron-packager . $npm_package_productName --out=dist --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --overwrite --prune --asar --arch=all --platform=darwin --electronVersion=$npm_package_electronVersion --app-version=$npm_package_version --icon=./assets/icons/mac/app.icns",
     "build:win64": "electron-packager . %npm_package_productName% --out=dist --arch=x64 --platform=win32 --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/win/app.ico --win32metadata.CompanyName=\"jiMUD\" --win32metadata.ProductName=\"jiMUD\" --win32metadata.FileDescription=\"jiMUD\" --win32metadata.OriginalFilename=\"jiMUD.exe\" --appCopyright=\"Copyright © 2017-2018 Icewolfz. All rights reserved.\"",
@@ -66,8 +68,6 @@
     "rebuild:linux64": "./node_modules/.bin/electron-rebuild -a=x64 -f -p",
     "rebuild:linuxarm": "./node_modules/.bin/electron-rebuild -a=arm -f -p",
     "rebuild:osx": "./node_modules/.bin/electron-rebuild -a=x64 -f -p",
-    "sass": "node-sass src/css/ -o build/css/ --output-style compressed",
-    "compile:themes": "node-sass src/themes/ -o build/themes/ --output-style compressed",
     "release:win32": "npm run compile && npm run rebuild:win32 && npm run build:win32 && npm run package:win32 && timeout 2 && npm run package:winportable32",
     "release:win64": "npm run compile && npm run rebuild:win64 && npm run build:win64 && npm run package:win64 && timeout 2 && npm run package:winportable64",
     "release:linux32": "npm run compile && npm run rebuild:linux32 && npm run build:linux32 && npm run package:linux32 && sleep 2 && npm run package:linux-other32",
