--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "rgbcolor": "^1.0.0",
     "spellchecker": "^3.4.4",
     "sqlite3": "^3.1.13",
-    "tmp": "0.0.31"
+    "tmp": "0.0.31",
+    "yargs-parser": "^10.0.0"
   }
 }
