--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "mathjs-expression-parser": "^1.0.0",
     "moment": "^2.22.1",
     "monaco-editor": "^0.12.0",
+    "resize-observer-polyfill": "^1.5.0",
     "rgbcolor": "^1.0.0",
     "spellchecker": "^3.4.4",
     "sqlite3": "^3.1.13",
