Fix arm/os npm scripts

--- a/package.json
+++ b/package.json
@@ -72,10 +72,10 @@
     "release:win64": "npm run compile && npm run rebuild:win64 && npm run build:win64 && npm run package:win64 && timeout 2 && npm run package:winportable64",
     "release:linux32": "npm run compile && npm run rebuild:linux32 && npm run build:linux32 && npm run package:linux32 && sleep 2 && npm run package:linux-other32",
     "release:linux64": "npm run compile && npm run rebuild:linux64 && npm run build:linux64 && npm run package:linux64 && sleep 2 && npm run package:linux-other64",
-    "release:linuxarm": "npm run compile && && npm run rebuild:linuxarm && npm run build:linux64 && npm run package:linuxarm && sleep 2 && npm run package:linux-otherarm",
+    "release:linuxarm": "npm run compile && npm run rebuild:linuxarm && npm run build:linux64 && npm run package:linuxarm && sleep 2 && npm run package:linux-otherarm",
     "release:win": "npm run release:win32 && npm run release:win64",
     "release:linux": "npm run release:linux32 && npm run release:linux64 && npm run release:linuxarm",
-    "release:osx": "npm run compile && && npm run rebuild:osx && npm run build:osx && npm run package:osx && sleep 2 && npm run package:osx",
+    "release:osx": "npm run compile && npm run rebuild:osx && npm run build:osx && npm run package:osx && sleep 2 && npm run package:osx",
     "clean:code": "del /q .\\out\\*.js && del /q .\\out\\editor\\*.js && del /q .\\build\\js\\*.js && del /q .\\build\\js\\editor\\*.js",
     "clean:css": "del /q .\\build\\css\\*.css",
     "clean:dist": "rm -rf ./dist"
