--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "package": "npm run package:winall && npm run package:linux",
     "package:winall": "npm run package:win && npm run package:winportable",
     "package:win": "npm run package:win32 && npm run package:win64",
-    "package:win64": "node_modules/.bin/build --pd=dist/jiMUD-win32-x64/ --win --x64 && ren \"dist\\jiMUD Setup %npm_package_version%.exe\" jiMUD_%npm_package_version%_Windows-x64.exe",
-    "package:win32": "node_modules/.bin/build --pd=dist/jiMUD-win32-ia32/ --win --ia32 && ren \"dist\\jiMUD Setup %npm_package_version%.exe\" jiMUD_%npm_package_version%_Windows-x32.exe",
+    "package:win64": "node_modules/.bin/build --pd=dist/jiMUD-win32-x64/ --win --x64 && ren \"dist\\jiMUD_Setup_%npm_package_version%_Windows.exe\" jiMUD_%npm_package_version%_Windows-x64.exe",
+    "package:win32": "node_modules/.bin/build --pd=dist/jiMUD-win32-ia32/ --win --ia32 && ren \"dist\\jiMUD_Setup_%npm_package_version%_Windows.exe\" jiMUD_%npm_package_version%_Windows-x32.exe",
     "package:win32-all": "npm run package:win32 && sleep 2 && npm run package:winportable32",
     "package:win64-all": "npm run package:win64 && sleep 2 && npm run package:winportable64",
     "package:winportable": "npm run package:winportable32 && npm run package:winportable64",
-    "package:winportable64": "node_modules/.bin/build --pd=dist/jiMUD-win32-x64/ --win portable:x64 && ren \"dist\\jiMUD %npm_package_version%.exe\" jiMUD_%npm_package_version%_Windows_portable-x64.exe",
-    "package:winportable32": "node_modules/.bin/build --pd=dist/jiMUD-win32-ia32/ --win portable:ia32 && ren \"dist\\jiMUD %npm_package_version%.exe\" jiMUD_%npm_package_version%_Windows_portable-x32.exe",
+    "package:winportable64": "node_modules/.bin/build --pd=dist/jiMUD-win32-x64/ --win portable:x64 && ren \"dist\\jiMUD_%npm_package_version%_Windows_portable.exe\" jiMUD_%npm_package_version%_Windows_portable-x64.exe",
+    "package:winportable32": "node_modules/.bin/build --pd=dist/jiMUD-win32-ia32/ --win portable:ia32 && ren \"dist\\jiMUD_%npm_package_version%_Windows_portable.exe\" jiMUD_%npm_package_version%_Windows_portable-x32.exe",
     "package:osx": "hdiutil create -format UDZO -srcfolder dist/jiMUD-darwin-x64/jiMUD.app dist/jiMUD_Mac.dmg",
     "package:linuxall": "package:linux && package:linux-other",
     "package:linuxb": "cd dist/ && tar -jcvf jiMUD_${npm_package_version}_Linux_x64.tar.bz2 jiMUD-linux-x64 && tar -jcvf jiMUD_${npm_package_version}_Linux_ia32.tar.bz2 jiMUD-linux-ia32 && tar -jcvf jiMUD_${npm_package_version}_Linux_armv7l.tar.bz2 jiMUD-linux-armv7l && cd ../",
@@ -59,6 +59,10 @@
     "package:linux-other32": "build --pd=dist/jiMUD-linux-ia32/ --l deb AppImage rpm --ia32",
     "package:linux-other64": "build --pd=dist/jiMUD-linux-x64/ --l deb AppImage rpm --x64",
     "package:linux-otherarm": "build --pd=dist/jiMUD-linux-armv7l/ --l deb AppImage rpm --armv7l",
+    "package:linux-all": "npm run package:linux-other32 && npm run package:linux-other64 && npm run package:linux-otherarm",
+    "package:linux-all32": "build --pd=dist/jiMUD-linux-ia32/ --l deb AppImage rpm tar.xz --ia32",
+    "package:linux-all64": "build --pd=dist/jiMUD-linux-x64/ --l deb AppImage rpm tar.xz --x64",
+    "package:linux-allArm": "build --pd=dist/jiMUD-linux-armv7l/ --l deb AppImage rpm tar.xz --armv7l",
     "min": "./node_modules/.bin/babili --minified out -d build/js",
     "min:common": "./node_modules/.bin/babili --minified out/common -d build/js",
     "min:worker": "./node_modules/.bin/babili --minified out/worker -d build/js",
@@ -70,11 +74,11 @@
     "rebuild:osx": "./node_modules/.bin/electron-rebuild -a=x64 -f -p",
     "release:win32": "npm run compile && npm run rebuild:win32 && npm run build:win32 && npm run package:win32 && timeout 2 && npm run package:winportable32",
     "release:win64": "npm run compile && npm run rebuild:win64 && npm run build:win64 && npm run package:win64 && timeout 2 && npm run package:winportable64",
-    "release:linux32": "npm run compile && npm run rebuild:linux32 && npm run build:linux32 && npm run package:linux32 && sleep 2 && npm run package:linux-other32",
-    "release:linux64": "npm run compile && npm run rebuild:linux64 && npm run build:linux64 && npm run package:linux64 && sleep 2 && npm run package:linux-other64",
+    "release:linux32": "npm run compile && npm run rebuild:linux32 && npm run build:linux32 && npm run package:linux-all32",
+    "release:linux64": "npm run compile && npm run rebuild:linux64 && npm run build:linux64 && npm run package:linux-all64",
     "release:linuxarm": "npm run compile && npm run rebuild:linuxarm && npm run build:linux64 && npm run package:linuxarm && sleep 2 && npm run package:linux-otherarm",
     "release:win": "npm run compile && npm run rebuild:win32 && npm run build:win32 && npm run package:win32 && timeout 2 && npm run package:winportable32 && npm run rebuild:win64 && npm run build:win64 && npm run package:win64 && timeout 2 && npm run package:winportable64",
-    "release:linux": "npm run compile && npm run rebuild:linux32 && npm run build:linux32 && npm run package:linux32 && sleep 2 && npm run package:linux-other32 && npm run rebuild:linux64 && npm run build:linux64 && npm run package:linux64 && sleep 2 && npm run package:linux-other64",
+    "release:linux": "npm run compile && npm run rebuild:linux32 && npm run build:linux32 && npm run package:linux-all32 && npm run rebuild:linux64 && npm run build:linux64 && npm run package:linux-all64",
     "release:osx": "npm run compile && npm run rebuild:osx && npm run build:osx && npm run package:osx && sleep 2 && npm run package:osx",
     "clean:code": "del /q .\\out\\*.js && del /q .\\out\\editor\\*.js && del /q .\\build\\js\\*.js && del /q .\\build\\js\\editor\\*.js",
     "clean:css": "del /q .\\build\\css\\*.css",
@@ -103,7 +107,11 @@
       "icon": "./assets/icons/win/app.ico"
     },
     "nsis": {
-      "installerIcon": "./assets/icons/win/app.ico"
+      "installerIcon": "./assets/icons/win/app.ico",
+      "artifactName": "${productName}_Setup_${version}_Windows-${arch}.${ext}"
+    },
+    "portable": {
+      "artifactName": "${productName}_${version}_Windows_portable-${arch}.${ext}"
     },
     "linux": {
       "maintainer": "icewolfz",
