--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "package:winall": "npm run package:win && npm run package:winportable",
     "package:win": "npm run package:win32 && npm run package:win64",
     "package:win64": "node_modules/.bin/build --pd=dist/jiMUD-win32-x64/ --win --x64 && ren \"dist\\jiMUD_Setup_%npm_package_version%_Windows.exe\" jiMUD_%npm_package_version%_Windows-x64.exe",
-    "package:win32": "node_modules/.bin/build --pd=dist/jiMUD-win32-ia32/ --win --ia32 && ren \"dist\\jiMUD_Setup_%npm_package_version%_Windows.exe\" jiMUD_%npm_package_version%_Windows-x32.exe",
+    "package:win32": "node_modules/.bin/build --pd=dist/jiMUD-win32-ia32/ --win --ia32 && ren \"dist\\jiMUD_Setup_%npm_package_version%_Windows.exe\" jiMUD_%npm_package_version%_Windows-ia32.exe",
     "package:win32-all": "npm run package:win32 && sleep 2 && npm run package:winportable32",
     "package:win64-all": "npm run package:win64 && sleep 2 && npm run package:winportable64",
     "package:winportable": "npm run package:winportable32 && npm run package:winportable64",
     "package:winportable64": "node_modules/.bin/build --pd=dist/jiMUD-win32-x64/ --win portable:x64 && ren \"dist\\jiMUD_%npm_package_version%_Windows_portable.exe\" jiMUD_%npm_package_version%_Windows_portable-x64.exe",
-    "package:winportable32": "node_modules/.bin/build --pd=dist/jiMUD-win32-ia32/ --win portable:ia32 && ren \"dist\\jiMUD_%npm_package_version%_Windows_portable.exe\" jiMUD_%npm_package_version%_Windows_portable-x32.exe",
+    "package:winportable32": "node_modules/.bin/build --pd=dist/jiMUD-win32-ia32/ --win portable:ia32 && ren \"dist\\jiMUD_%npm_package_version%_Windows_portable.exe\" jiMUD_%npm_package_version%_Windows_portable-ia32.exe",
     "package:osx": "hdiutil create -format UDZO -srcfolder dist/jiMUD-darwin-x64/jiMUD.app dist/jiMUD_Mac.dmg",
     "package:linuxall": "package:linux && package:linux-other",
     "package:linuxb": "cd dist/ && tar -jcvf jiMUD_${npm_package_version}_Linux_x64.tar.bz2 jiMUD-linux-x64 && tar -jcvf jiMUD_${npm_package_version}_Linux_ia32.tar.bz2 jiMUD-linux-ia32 && tar -jcvf jiMUD_${npm_package_version}_Linux_armv7l.tar.bz2 jiMUD-linux-armv7l && cd ../",
