--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "package": "npm run package:winall && npm run package:linux",
     "package:winall": "npm run package:win && npm run package:winportable",
     "package:win": "npm run package:win32 && npm run package:win64",
-    "package:win64": "node_modules/.bin/build --pd=dist/jiMUD-win32-x64/ --win --x64 && ren \"dist\\jiMUD_Setup_%npm_package_version%_Windows.exe\" jiMUD_%npm_package_version%_Windows-x64.exe",
     "package:win32": "node_modules/.bin/build --pd=dist/jiMUD-win32-ia32/ --win --ia32 && ren \"dist\\jiMUD_Setup_%npm_package_version%_Windows.exe\" jiMUD_%npm_package_version%_Windows-ia32.exe",
-    "package:win32-all": "npm run package:win32 && sleep 2 && npm run package:winportable32",
-    "package:win64-all": "npm run package:win64 && sleep 2 && npm run package:winportable64",
+    "package:win64": "node_modules/.bin/build --pd=dist/jiMUD-win32-x64/ --win --x64 && ren \"dist\\jiMUD_Setup_%npm_package_version%_Windows.exe\" jiMUD_%npm_package_version%_Windows-x64.exe",
+    "package:win32-all": "node_modules/.bin/build --pd=dist/jiMUD-win32-ia32/ --win nsis portable --ia32 && ren \"dist\\jiMUD_Setup_%npm_package_version%_Windows.exe\" jiMUD_%npm_package_version%_Windows-ia32.exe && ren \"dist\\jiMUD_%npm_package_version%_Windows_portable.exe\" jiMUD_%npm_package_version%_Windows_portable-ia32.exe",
+    "package:win64-all": "node_modules/.bin/build --pd=dist/jiMUD-win32-x64/ --win nsis portable --x64 && ren \"dist\\jiMUD_Setup_%npm_package_version%_Windows.exe\" jiMUD_%npm_package_version%_Windows-x64.exe && ren \"dist\\jiMUD_%npm_package_version%_Windows_portable.exe\" jiMUD_%npm_package_version%_Windows_portable-x64.exe",
     "package:winportable": "npm run package:winportable32 && npm run package:winportable64",
     "package:winportable64": "node_modules/.bin/build --pd=dist/jiMUD-win32-x64/ --win portable:x64 && ren \"dist\\jiMUD_%npm_package_version%_Windows_portable.exe\" jiMUD_%npm_package_version%_Windows_portable-x64.exe",
     "package:winportable32": "node_modules/.bin/build --pd=dist/jiMUD-win32-ia32/ --win portable:ia32 && ren \"dist\\jiMUD_%npm_package_version%_Windows_portable.exe\" jiMUD_%npm_package_version%_Windows_portable-ia32.exe",
@@ -72,12 +72,12 @@
     "rebuild:linux64": "./node_modules/.bin/electron-rebuild -a=x64 -f -p",
     "rebuild:linuxarm": "./node_modules/.bin/electron-rebuild -a=arm -f -p",
     "rebuild:osx": "./node_modules/.bin/electron-rebuild -a=x64 -f -p",
-    "release:win32": "npm run compile && npm run rebuild:win32 && npm run build:win32 && npm run package:win32 && timeout 2 && npm run package:winportable32",
-    "release:win64": "npm run compile && npm run rebuild:win64 && npm run build:win64 && npm run package:win64 && timeout 2 && npm run package:winportable64",
+    "release:win32": "npm run compile && npm run rebuild:win32 && npm run build:win32 && npm run package:win32-all",
+    "release:win64": "npm run compile && npm run rebuild:win64 && npm run build:win64 && npm run package:win64-all",
     "release:linux32": "npm run compile && npm run rebuild:linux32 && npm run build:linux32 && npm run package:linux-all32",
     "release:linux64": "npm run compile && npm run rebuild:linux64 && npm run build:linux64 && npm run package:linux-all64",
     "release:linuxarm": "npm run compile && npm run rebuild:linuxarm && npm run build:linux64 && npm run package:linuxarm && sleep 2 && npm run package:linux-otherarm",
-    "release:win": "npm run compile && npm run rebuild:win32 && npm run build:win32 && npm run package:win32 && timeout 2 && npm run package:winportable32 && npm run rebuild:win64 && npm run build:win64 && npm run package:win64 && timeout 2 && npm run package:winportable64",
+    "release:win": "npm run compile && npm run rebuild:win32 && npm run build:win32 && npm run package:win32-all && npm run rebuild:win64 && npm run build:win64 && npm run package:win64-all",
     "release:linux": "npm run compile && npm run rebuild:linux32 && npm run build:linux32 && npm run package:linux-all32 && npm run rebuild:linux64 && npm run build:linux64 && npm run package:linux-all64",
     "release:osx": "npm run compile && npm run rebuild:osx && npm run build:osx && npm run package:osx && sleep 2 && npm run package:osx",
     "clean:code": "del /q .\\out\\*.js && del /q .\\out\\editor\\*.js && del /q .\\build\\js\\*.js && del /q .\\build\\js\\editor\\*.js",
