Add missing file to new build prcess

--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
       "./fonts/**/*",
       "./lib/**/*",
       "./changelog.md",
-      "./readme.md"
+      "./readme.md",
+      "./package.json"
     ],
     "extends": null,
     "win": {
