Fix release scripts

--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "rebuild:linux64": "./node_modules/.bin/electron-rebuild -a=x64 -f -p",
     "rebuild:linuxarm": "./node_modules/.bin/electron-rebuild -a=arm -f -p",
     "rebuild:osx": "./node_modules/.bin/electron-rebuild -a=x64 -f -p",
-    "release:win": "npm run compile npm run package:win",
-    "release:linux": "npm run compile&& npm run package:linux",
+    "release:win": "npm run compile && npm run package:win",
+    "release:linux": "npm run compile && npm run package:linux",
     "release:osx": "npm run compile && npm run package:osx",
     "clean:code": "del /q .\\out\\*.js && del /q .\\out\\editor\\*.js && del /q .\\build\\js\\*.js && del /q .\\build\\js\\editor\\*.js",
     "clean:css": "del /q .\\build\\css\\*.css",
