--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "package:win": "node_modules/.bin/build --win nsis portable --ia32 --x64",
     "package:winportable": "node_modules/.bin/build --win portable  --ia32 --x64",
     "package:osx": "node_modules/.bin/build --mac",
-    "package:linux": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz --ia32 --x64",
+    "package:linux": "npm run package:linux32 && npm run package:linux64",
+    "package:linux32": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz --ia32",
+    "package:linux64": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz --x64",
     "min": "./node_modules/.bin/babili --minified out -d build/js",
     "min:common": "./node_modules/.bin/babili --minified out/common -d build/js",
     "min:worker": "./node_modules/.bin/babili --minified out/worker -d build/js",
