Upgrade minify systems

--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "package:linux": "npm run package:linux32 && npm run package:linux64",
     "package:linux32": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz --ia32",
     "package:linux64": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz --x64",
-    "min": "./node_modules/.bin/babili --minified out -d build/js",
-    "min:common": "./node_modules/.bin/babili --minified out/common -d build/js",
-    "min:worker": "./node_modules/.bin/babili --minified out/worker -d build/js",
+    "min": "./node_modules/.bin/minify out -d build/js --mangle",
     "release:win": "npm run compile && npm run package:win",
     "release:linux": "npm run compile && npm run package:linux",
     "release:osx": "npm run compile && npm run package:osx",
@@ -50,8 +48,7 @@
     "@types/bootstrap": "^3.3.39",
     "@types/jquery": "^2.0.49",
     "@types/node": "^7.0.67",
-    "babel-cli": "^6.26.0",
-    "babili": "^0.1.4",
+    "babel-minify": "^0.4.3",
     "devtron": "^1.4.0",
     "electron": "^2.0.6",
     "electron-builder": "^20.25.0",
