--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "fs-extra": "^6.0.1",
     "jquery": "^3.3.1",
     "lz-string": "^1.4.4",
+    "markdown-it": "^8.4.2",
     "mathjs-expression-parser": "^1.0.0",
     "moment": "^2.22.2",
     "monaco-editor": "^0.14.3",
