Attempt to fix adding fswin to linux builds

--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
       "category": "Game;Network;",
       "synopsis": "MUD client coded in javascript.",
       "files": [
-        "!./lib/fswin/*"
+        "!./lib/fswin/**/*"
       ]
     }
   },
