Cut more blot from node modules

--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
       "./changelog.md",
       "./readme.md",
       "./package.json",
-      "!node_modules/**/*.{py,c,gz,sln,map,lib,sh,gyp,gypi,html,md,MD,markdown,txt,tlog,vcxproj,vcxproj.*,yml,xml}",
-      "!node_modules/**/{MAKEFILE,Dockerfile,TODO,README,LICENSE,LICENSE.*,Makefile,License,NOTICE,license}",
+      "!node_modules/**/*.{py,c,gz,sln,map,lib,sh,gyp,gypi,html,md,MD,markdown,txt,tlog,vcxproj,vcxproj.*,yml,xml,iobj,ipdb}",
+      "!node_modules/**/{MAKEFILE,Dockerfile,TODO,README,LICENSE,LICENSE.*,Makefile,License,NOTICE,license,gruntfile.js,metadata.js,metadata.json,bower.json}",
       "!node_modules/**/doc/*",
       "!node_modules/**/Release/*.{map,lib,exp}",
       "!node_modules/**/(browser|demo|obj|doc|test)/*",
@@ -80,6 +80,7 @@
       "!node_modules/**/*.debug.js'",
       "!node_modules/better-sqlite3/deps/*",
       "!node_modules/better-sqlite3/obj/*",
+      "!node_modules/better-sqlite3/build/Release/obj/**/*",
       "!node_modules/better-sqlite3/build/Release/test_extension.node",
       "!node_modules/**/benchmark/*",
       "!node_modules/**/browser/*",
