--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
       "./changelog.md",
       "./readme.md",
       "./package.json",
+      "!lib/**/*.{py,c,gz,sln,map,lib,sh,gyp,gypi,html,md,MD,markdown,txt,tlog,vcxproj,vcxproj.*,yml,xml,iobj,ipdb}",
       "!node_modules/**/*.{py,c,gz,sln,map,lib,sh,gyp,gypi,html,md,MD,markdown,txt,tlog,vcxproj,vcxproj.*,yml,xml,iobj,ipdb}",
       "!node_modules/**/{MAKEFILE,Dockerfile,TODO,README,LICENSE,LICENSE.*,Makefile,License,NOTICE,license,gruntfile.js,metadata.js,metadata.json,bower.json}",
       "!node_modules/**/doc/*",
