--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
       "./package.json",
       "!lib/**/*.{py,c,gz,sln,map,lib,sh,gyp,gypi,html,md,MD,markdown,txt,tlog,vcxproj,vcxproj.*,yml,xml,iobj,ipdb}",
       "!node_modules/**/*.{py,c,gz,sln,map,lib,sh,gyp,gypi,html,md,MD,markdown,txt,tlog,vcxproj,vcxproj.*,yml,xml,iobj,ipdb}",
-      "!node_modules/**/{MAKEFILE,Dockerfile,TODO,README,LICENSE,LICENSE.*,Makefile,License,NOTICE,license,gruntfile.js,metadata.js,metadata.json,bower.json}",
+      "!node_modules/**/{MAKEFILE,Dockerfile,TODO,README,LICENSE,LICENSE.*,Makefile,License,NOTICE,license,gruntfile.js,metadata.js,metadata.json,bower.json,component.json}",
       "!node_modules/**/doc/*",
       "!node_modules/**/Release/*.{map,lib,exp}",
       "!node_modules/**/(browser|demo|obj|doc|test)/*",
@@ -85,7 +85,10 @@
       "!node_modules/better-sqlite3/build/Release/test_extension.node",
       "!node_modules/**/benchmark/*",
       "!node_modules/**/browser/*",
-      "!node_modules/monaco-editor/!(min)/*"
+      "!node_modules/monaco-editor/!(min)/*",
+      "!node_modules/moment/locale/*",
+      "!node_modules/moment/min/*",
+      "!node_modules/spellchecker/vendor/hunspell/*"
     ],
     "extends": null,
     "asar": {
