More bloat trimming

--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
       "!node_modules/moment/locale/*",
       "!node_modules/moment/min/*",
       "!node_modules/spellchecker/vendor/hunspell/*",
-      "!node_modules/{xtend,prebuild-install,detect-libc,expand-template,github-from-package,node-abi,noop-logger,npmlog,os-homedir,tar-fs,pump,rc,simple-get,tunnel-agent,which-pm-runs,tar-stream,tar-stream/readable-stream}/**/*"
+      "!node_modules/{strip-ansi,string-width,wide-align,signal-exit,has-unicode,console-control-strings,aproba,gauge,end-of-stream,once,wrappy,xtend,prebuild-install,detect-libc,expand-template,github-from-package,node-abi,noop-logger,npmlog,os-homedir,tar-fs,pump,rc,simple-get,tunnel-agent,which-pm-runs,tar-stream,tar-stream/readable-stream}/**/*"
     ],
     "extends": null,
     "asar": {
