--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "package": "npm run package:win && npm run package:linux",
     "package:win": "node_modules/.bin/build --win nsis portable --ia32 --x64",
     "package:winportable": "node_modules/.bin/build --win portable  --ia32 --x64",
-    "package:osx": "node_modules/.bin/build --mac",
+    "package:mac": "node_modules/.bin/build --mac dmg pkg zip",
     "package:linux": "npm run package:linux32 && npm run package:linux64",
     "package:linux32": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz --ia32",
     "package:linux64": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz --x64",
     "min": "./node_modules/.bin/minify out -d build/js --mangle",
     "release:win": "npm run compile && npm run package:win",
     "release:linux": "npm run compile && npm run package:linux",
-    "release:osx": "npm run compile && npm run package:osx",
+    "release:mac": "npm run compile && npm run package:mac",
     "clean:code": "del /q .\\out\\*.js && del /q .\\out\\editor\\*.js && del /q .\\build\\js\\*.js && del /q .\\build\\js\\editor\\*.js",
     "clean:css": "del /q .\\build\\css\\*.css",
     "clean:dist": "rm -rf ./dist"
