--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "package": "npm run package:win && npm run package:linux",
     "package:win": "node_modules/.bin/build --win nsis portable --ia32 --x64",
     "package:winportable": "node_modules/.bin/build --win portable  --ia32 --x64",
-    "package:mac": "node_modules/.bin/build --mac dmg pkg zip",
+    "package:mac": "node_modules/.bin/build --mac pkg zip",
     "package:linux": "npm run package:linux32 && npm run package:linux64",
     "package:linux32": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz --ia32",
     "package:linux64": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz --x64",
