Linux: remove snap package as cant cross compile right now

--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "package:winportable": "node_modules/.bin/build --win portable  --ia32 --x64",
     "package:mac": "node_modules/.bin/build --mac pkg zip",
     "package:linux": "npm run package:linux32 && npm run package:linux64",
-    "package:linux32": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz snap --ia32",
-    "package:linux64": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz snap --x64",
+    "package:linux32": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz --ia32",
+    "package:linux64": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz --x64",
     "min": "./node_modules/.bin/minify out -d build/js --mangle --simplify",
     "release:win": "npm run compile && npm run package:win",
     "release:linux": "npm run compile && npm run package:linux",
