--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
     }
   },
   "dependencies": {
-    "archiver": "^3.0.0",
+    "adm-zip": "^0.4.13",
     "better-sqlite3": "^5.3.0",
     "buzz": "^1.2.1",
     "chokidar": "^2.0.4",
