Log viewer: add option to backup logs as zip file Preferences: add option to backup as zip file Profile manager: add option to export and import as zip file

--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "spellchecker": "^3.5.0",
     "tmp": "0.0.33",
     "yargs-parser": "^11.1.1",
+    "yauzl": "^2.10.0",
     "yazl": "^2.5.1"
   }
 }
