Code Editor: Fix monaco-editor missing files in package build from 0.19 update

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "devDependencies": {
     "@types/bootstrap": "^3.4.0",
     "@types/jquery": "^3.3.31",
-    "@types/node": "^12.12.21",
+    "@types/node": "^12.12.22",
     "babel-minify": "^0.4.3",
     "devtron": "^1.4.0",
     "electron": "^7.1.7",
@@ -96,7 +96,8 @@
       "!node_modules/moment/locale/*",
       "!node_modules/moment/min/*",
       "!node_modules/spellchecker/vendor/hunspell/*",
-      "!node_modules/{strip-ansi,string-width,wide-align,signal-exit,has-unicode,console-control-strings,aproba,gauge,end-of-stream,xtend,prebuild-install,detect-libc,expand-template,github-from-package,node-abi,noop-logger,npmlog,os-homedir,tar-fs,pump,rc,simple-get,tunnel-agent,which-pm-runs,tar-stream,tar-stream/readable-stream}/**/*"
+      "!node_modules/{strip-ansi,string-width,wide-align,signal-exit,has-unicode,console-control-strings,aproba,gauge,end-of-stream,xtend,prebuild-install,detect-libc,expand-template,github-from-package,node-abi,noop-logger,npmlog,os-homedir,tar-fs,pump,rc,simple-get,tunnel-agent,which-pm-runs,tar-stream,tar-stream/readable-stream}/**/*",
+      "node_modules/monaco-editor/min/**/*"
     ],
     "extends": null,
     "asar": {
