Replace drivelist module as does not work in electron 9

--- a/package.json
+++ b/package.json
@@ -136,7 +136,6 @@
     "better-sqlite3": "^7.0.1",
     "buzz": "^1.2.1",
     "chokidar": "^3.4.0",
-    "drivelist": "^8.0.10",
     "electron-updater": "^4.3.1",
     "fontmanager-redux": "^0.4.0",
     "fs-extra": "^9.0.0",
@@ -146,6 +145,7 @@
     "mathjs-expression-parser": "^1.0.2",
     "moment": "^2.25.3",
     "monaco-editor": "^0.20.0",
+    "node-disk-info": "^1.0.4",
     "rgbcolor": "^1.0.1",
     "tmp": "^0.2.1",
     "yargs-parser": "^18.1.3",
